style.css
/*
Theme Name: Halfwhite
Theme URI: http://theme.dunyakirkali.tk
Description: A halfwhite two column theme.
Author: Ilana Marcovic & Dunya Kirkali
Author URI: http://logosaints.com/
Version: 1.0
Tags: two, column, white, half
.
Your theme can be your copyrighted work.
Like WordPress, this work is released under GNU General Public License, version 2 (GPL).
 
http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
.
*/


/* TYPEFACE */
@media only screen {
  .site-title-font {
    font-size: 1.6rem;
    letter-spacing: 5.2px;  
    margin-top: 78px;    
  }
  
  .site-subtitle-font {
    font-size: 0.6rem;
    letter-spacing: 4px;
  }
}

@media only screen and (min-width: 40.063em) {
  .site-title-font {
    font-size: 2.3em;
    letter-spacing: 8px;  
    margin-top: 74px;
  }

  .site-subtitle-font {
    font-size: 0.8rem;  
    letter-spacing: 6.9px;
  }
}

@media only screen and (min-width: 64.063em) {
  .site-title-font {
    font-size: 3em;
    letter-spacing: 8px;
    margin-top: 67px;     
  }

  .site-subtitle-font {
    font-size: 1rem;  
    letter-spacing: 8.2px;
  }
}


.page-title-font {
  
}

.mobile-menu-font {
  
}

.navigation-font {
  
}

.page-content-font {
  
}

.menu-icon {
  padding: 10px;
  font-size: 1em;
  position:absolute;
  top:0;
  left:0;
}

/* ------ ------- ------- ------- ------- -*/

#site-title {
  margin-bottom:0;
  line-height:1;
}

.page h2 {
  text-align: center;
  margin-top:70px;  
  margin-bottom:60px;  
}

#placeholder_1 {
  height: 25vh;
}

#placeholder_2 {
  height: 25vh;
}

#copyright-div {
  margin-top:70px;
  text-align:center;
}

#copyright {
  margin-bottom:0.3rem;
}

#first {
  -moz-background-size: cover !important;
  -webkit-background-size: cover !important;
  -o-background-size: cover !important; 
  background-size: cover !important; 
  min-height:100vh !important;
  padding:0 !important;
  height:100vh !important;
}

#second {
  height:100vh !important;
}

@media only screen and (min-width: 40.063em) {
  #second {
    overflow-y:scroll;
    overflow-x:hidden;  
  }
}

/* MENU */

#large-menu {
  margin-top: 9vh;
}

.dropdown {
  text-align:center;
}

#menu-row {
  background-color:#F2F2F2;
  margin-top: 5vh;
  margin-bottom: 5vh;
  text-align:center;  
}

#menu-link {
  text-align:center;
}

#menu-menu {
  background-color:#F2F2F2;
  text-align: center;
  list-style-type: none;
  padding: 0;
}

.mobile-menu {
  height: 35px;
  background-color:#F2F2F2;
  text-align:center;
}

.mobile-menu a {
  display:inline-block;
  padding-top:10px;
}

#menu-menu-1 {
  text-align: center;
  list-style-type: none;
  padding: 0;
}

.menu-item span { 
  margin-left: 10px;
  margin-right: 10px;
}

#menu-menu-1 li:last-child span  {
  display:none;
}

#menu-menu-1 a {  
  color: inherit;
  text-decoration: inherit;
  cursor: inherit;
} 

#menu-menu-1 .current-menu-item a {
  border-top-style: solid;
  border-top-width: 2px;
  padding-top:15px;
}

#menu-menu-1 a &:active {
  outline: none;
}

#menu-menu-1 a &:focus {
  outline: none;
}

#menu-menu-1 li {  
  display: inline;  
  margin: 0;
}  

/* Caption */

#caption {
  background-color: white;
  text-align: center;
  text-transform: uppercase; 
  height:200px;
  width:;
}

/* FORM */

input {   
  background: #F2F2F2 !important;
  color: #999999 !important;
  border: 0 !important;  
}

textarea {
  color: #999999 !important;
  background: #F2F2F2 !important;
  border: 0 !important;  
}

input[type="submit"] {
  background: black !important;
  color: white !important;
  width: 100% !important;
  border: 0 !important;
  height: 50px;
}


/*!
 *  Font Awesome 4.0.3 by @davegandy - http://fontawesome.io - @fontawesome
 *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
 */
/* FONT PATH
 * -------------------------- */
@font-face {
  font-family: 'FontAwesome';
  src: url('fonts/fontawesome-webfont.eot?v=4.0.3');
  src: url('fonts/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff?v=4.0.3') format('woff'), url('fonts/fontawesome-webfont.ttf?v=4.0.3') format('truetype'), url('fonts/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
  font-weight: normal;
  font-style: normal;
}
.fa {
  display: inline-block;
  font-family: FontAwesome;
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
/* makes the font 33% larger relative to the icon container */
.fa-lg {
  font-size: 1.3333333333333333em;
  line-height: 0.75em;
  vertical-align: -15%;
}
.fa-2x {
  font-size: 2em;
}
.fa-3x {
  font-size: 3em;
}
.fa-4x {
  font-size: 4em;
}
.fa-5x {
  font-size: 5em;
}
.fa-fw {
  width: 1.2857142857142858em;
  text-align: center;
}
.fa-ul {
  padding-left: 0;
  margin-left: 2.142857142857143em;
  list-style-type: none;
}
.fa-ul > li {
  position: relative;
}
.fa-li {
  position: absolute;
  left: -2.142857142857143em;
  width: 2.142857142857143em;
  top: 0.14285714285714285em;
  text-align: center;
}
.fa-li.fa-lg {
  left: -1.8571428571428572em;
}
.fa-border {
  padding: .2em .25em .15em;
  border: solid 0.08em #eeeeee;
  border-radius: .1em;
}
.pull-right {
  float: right;
}
.pull-left {
  float: left;
}
.fa.pull-left {
  margin-right: .3em;
}
.fa.pull-right {
  margin-left: .3em;
}
.fa-spin {
  -webkit-animation: spin 2s infinite linear;
  -moz-animation: spin 2s infinite linear;
  -o-animation: spin 2s infinite linear;
  animation: spin 2s infinite linear;
}
@-moz-keyframes spin {
  0% {
    -moz-transform: rotate(0deg);
  }
  100% {
    -moz-transform: rotate(359deg);
  }
}
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
  }
}
@-o-keyframes spin {
  0% {
    -o-transform: rotate(0deg);
  }
  100% {
    -o-transform: rotate(359deg);
  }
}
@-ms-keyframes spin {
  0% {
    -ms-transform: rotate(0deg);
  }
  100% {
    -ms-transform: rotate(359deg);
  }
}
/* ... */

